# Cellular-automaton-ice

./: 2D_CA_OOP.ipynb  2D_CA_functional.ipynb  2D_CA_ice.ipynb  2D_CA_snowflakes.ipynb  README.md  Snowflake_fuckaround.ipynb  attachment_coeff_example.ipynb  graphiques_resultats.ipynb  ice_funcs.py  numba_test.ipynb  parameter_exploration.py  pyproject.toml  reference_ice_map.csv  renderer.ipynb  snowflake_playground.ipynb  snowflake_plot.py  test_graph.ipynb
data/exemple_raw_dendrites/: 10  11  12  3  4  5  6  9  specs.csv
data/exemple_raw_plates/: 1  5  7  9  specs.csv
data/exemple_raw_sweep/: 4  5  specs.csv
data_sample/: 1  10  12  13  15  3  4  6  7  9
debug_test/: 11  specs.csv
dendrite_search/: 1  10  12  13  14  15  2  3  4  6  8  9  specs.csv
exemple_raw_dendrites/: 1  13  14  15  7
exemple_raw_plates/: 2  3  4  6
exemple_raw_sweep/: 3  6  8
exploration_first_pass/: 1  26  specs.csv
gaming_as_hell/: specs.csv
gaming_as_hell_2/: specs.csv
gaming_as_hell_half/: specs.csv
