[tool.poetry]
name = "cellular-automaton-ice"
version = "0.1.0"
description = "Cellular automaton simulation of 2 dimensionnal ice crystal"
authors = ["Theo N. Dionne <theo.nathaniel.dionne@usherbrooke.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
